part1/1.12/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-storage
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-app
          image: tripplen63/todo-app:1.12
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: image-storage
              mountPath: /usr/src/app/files
